MESSAGE(STATUE "This is include dir" ${INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${INCLUDE_DIRS})
SET(PARALLEL_LIST parallel_base.cpp wait_node.cpp wait_tree.cpp wait_conds.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/lib)
ADD_DEFINITIONS(${DEBUG_DEFS})
LINK_DIRECTORIES(${LIBS_LINK_DIRS})
ADD_LIBRARY(parallel SHARED ${PARALLEL_LIST})
TARGET_LINK_LIBRARIES(parallel ${LIBS_LINK_LIBS})


